--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@nuxt/typescript-runtime": "^2.0.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
+    "ramda": "^0.27.1",
+    "vue-awesome-swiper": "^4.1.1",
     "vuetify": "^2.3.10"
   },
   "devDependencies": {
