--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
+    "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5",
     "ramda": "^0.27.1",
+    "swiper": "5.x",
     "vue-awesome-swiper": "^4.1.1",
     "vuetify": "^2.3.10"
   },
