--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-electron-example",
+  "name": "Graduate-DVD",
   "version": "1.0.0",
   "private": true,
   "main": "dist/main/index.js",
@@ -74,6 +74,9 @@
     "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.3",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "fibers": "^5.0.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   }
 }
